<resources>
    <string name="app_name">SIMS</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="inventory">Inventory</string>
    <string name="sims_logo">SIMS Logo</string>
    <string name="header_product">Products</string>
    <string name="search_product">Search Product</string>
    <string name="ic_filter">Filter Icon</string>
    <string name="ic_search">Search Icon</string>
    <string name="product_category">Product Category</string>
    <string name="see_all"><![CDATA[See all >>]]></string>
    <string name="ic_back_arrow">Back Arrow Icon</string>
    <string name="product_card">Product Card</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="product_name">Product Name</string>
    <string name="units"># Unit(s)</string>
    <string name="saving">Saving…</string>
    <string name="add_item">Add Item</string>
    <string name="ic_upload_img">Upload Image Icon</string>
    <string name="item_description">Item Description</string>
    <string name="code">Code</string>
    <string name="product_code">Product Code</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="supplier">Supplier</string>
    <string name="date_added">Date Added</string>
    <string name="last_restocked">Last Restocked</string>
    <string name="last__restocked">Last\nRestocked</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="view_items">View Items</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="greetings">Hello, %1$s!</string>
    <string name="edit_image">Edit Image</string>
    <string name="loginBtn">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_question">Not yet Registered?\nContact admin for support.</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">Jedda Kidlongan</string>
    <string name="name">Name</string>
    <string name="profile_message">IMPORTANT: If you need to make any changes on your
        profile, please contact your admin for assistance.
    </string>
    <string name="user01">user01</string>
    <string name="user">User</string>
    <string name="role">Role</string>
    <string name="item_image">Item Image</string>
    <string name="stock_count">500 unit(s)</string>
    <string name="sample_code">ABC-123</string>
    <string name="sample_name">Syringes (5mL)</string>
    <string name="sample_category"><![CDATA[Syringes & Needles]]></string>
    <string name="sample_location">Storage Room 1</string>
    <string name="sample_supplier">QuickMed</string>
    <string name="sample_date_added">10/01/24</string>
    <string name="sample_last_restock_date">10/13/24</string>
    <string name="item_details">Item Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="sanvicare">Sanvicare</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="history">History</string>
    <string name="manage_users">Manage Users</string>
    <string name="generate_reports">Generate Reports</string>
    <string name="add_user">Add User</string>
    <string name="ic_add_user">Add User Icon</string>
    <string name="search">Search</string>
    <string name="id">ID</string>
    <string name="action">Action</string>
    <string name="sample_id">01</string>
    <string name="sample_name2">Firip Baradadu</string>
    <string name="sample_id2">02</string>
    <string name="admin">Admin</string>
    <string name="delete_user">Are you sure you want to delete this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_activity_log">User Activity Log</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="date">Date</string>
    <string name="sample_log">Edited item [Mediheal - Pulse Oximeter]</string>
    <string name="sample_log2">Added new item - [Mediheal - Pulse Oximeter]</string>
    <string name="today">Today</string>
    <string name="sample_notif">Stocks for [TopCare - Sterile Gauze Pads (10x10cm)] is low. Stocks left: [35]</string>
    <string name="sample_notif2">Stocks for [Betadine - Povidone-Iodine 10% (250ml)] is low. Stocks left: [20]</string>
    <string name="sample_notif3">Stocks for [GreenCross - Isopropyl Alcohol 70% (500ml)] is very low. Stocks left: [2]</string>
    <string name="sample_notif4">Stocks for [GreenCross - Hand Sanitizer (300ml)] is very low. Stocks left: [1]</string>
    <string name="yesterday">Yesterday</string>
    <string name="sanvicare_logo">Sanvicare Logo</string>
    <string name="sanvicare_medical_supply">Sanvicare Medical Supply</string>
    <string name="mission">Our mission is to help healthcare providers and enhance patient care by offering top-notch medical supplies and equipment that are easily accessible, reasonably priced, and dependable for everyone.</string>
    <string name="desc_mission">Mission</string>
    <string name="vision">In the medical supply sector, we want to be a dependable leader that advances healthcare by innovation, customer-focused care, and a dedication to improving community well-being throughout the world.</string>
    <string name="desc_vision">Vision</string>
    <string name="user_admin">admin</string>
    <string name="save_changes">Are you sure you want to save changes?</string>
    <string name="cancel_prompt">All unsaved changes will be lost. Are you sure you want to proceed?</string>
    <string name="delete_product">Are you sure you want to delete this item?</string>
    <string name="search_user">Search User</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="filter">Filter</string>
    <string name="no_products_found">No products found for the category %1$s</string>
    <string name="added_item">Added Item</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="sample_wt">1g</string>
    <string name="weight">Weight</string>
    <string name="rackNo">Rack No.</string>
    <string name="product_rack">#</string>
    <string name="product_weight">Product Weight</string>
    <string name="noOfItems">%1$s!</string>
    <string name="noOfAlerts">%1$s!</string>
    <string name="items">Items</string>
    <string name="alerts">Alerts</string>
    <string name="topSellingItem">%1$s!</string>
    <string name="top_selling_item">Top Selling Item</string>
</resources>