<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gr_lower">

        <TextView
            android:id="@+id/history_date"
            android:text="@string/sample_last_restock_date"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:padding="6dp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/history_name"
            android:text="@string/user_name"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/history_action"
            android:text="@string/sample_log"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:maxLines="2"
            android:ellipsize="end"
            android:padding="6dp"
            android:gravity="start|center_vertical"
            tools:ignore="VisualLintBounds" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gr_upper"
        >

        <TextView
            android:text="@string/sample_date_added"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:padding="6dp"
            android:gravity="center_vertical"/>

        <TextView
            android:text="@string/user_name"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:gravity="start|center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start|center_vertical"
            android:padding="6dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/sample_log2"
            android:textColor="@color/black"
            tools:ignore="VisualLintBounds" />
    </TableRow>

</LinearLayout>