<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TableRow
        android:id="@+id/trUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gr_lower">

        <TextView
            android:id="@+id/userId"
            android:text="@string/sample_id"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.3"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="6dp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:padding="6dp"
            android:text="@string/user_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/userRole"
            android:text="@string/user"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="6dp"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/editBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:backgroundTint="#FF9800"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit_changes"
                android:scaleType="fitCenter"
                app:cornerRadius="10dp"
                android:elevation="2dp"
                tools:ignore="ButtonStyle,TextContrastCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:backgroundTint="@color/cancel_color"
                android:contentDescription="@string/delete"
                android:elevation="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_delete_changes"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,TextContrastCheck,ImageContrastCheck" />

        </LinearLayout>

    </TableRow>
</ScrollView>