<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".AboutPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/about"
            android:textColor="@color/primary_color"
            android:textSize="32sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/about_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp"
            android:background="@color/bg_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|center_vertical"
                android:padding="24dp">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/divider_color"
                    />

                <!-- Logo -->
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sanvicare_logo"
                    android:src="@drawable/sanvicare_logo"
                    tools:ignore="ImageContrastCheck" />

                <!-- Company Name -->
                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/sanvicare_medical_supply"
                    android:textSize="20sp"
                    android:textColor="@color/profile_color"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold" />

                <!-- Mission Statement -->
                <TextView
                    android:id="@+id/mission_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_mission"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/mission_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mission"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    tools:ignore="VisualLintLongText" />

                <!-- Vision Statement -->
                <TextView
                    android:id="@+id/vision_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_vision"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/vision_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vision"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    tools:ignore="VisualLintLongText" />
                

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/divider_color"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>
