<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="4dp"
    android:layout_margin="5dp"
    android:backgroundTint="#00FFFFFF"
    app:cardCornerRadius="10dp"
    android:id="@+id/productCardView">

    <LinearLayout
        android:id="@+id/grid_view_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/bg_product_img"
            android:contentDescription="@string/product_card"
            android:scaleType="fitCenter"
            android:src="@drawable/sims_logo"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/product_info"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:orientation="vertical"
            android:background="@drawable/bg_product_info"
            android:textAlignment="textStart"
            android:padding="8dp">

            <TextView
                android:id="@+id/product_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/supplier_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_black"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/units"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>